# SqEngine

./: .clang-format  .gitignore  .gitmodules  README.md  meson.build
Sandbox/: main.cpp  meson.build
SqueakyEngine/: meson.build
SqueakyEngine/include/sq/: Application.h  Core.h  EntryPoint.h  Layer.h  LayerStack.h  Logger.h  Window.h
SqueakyEngine/include/sq/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
SqueakyEngine/include/sq/platform/linux/: LinuxWindow.h
SqueakyEngine/pch/: sq.pch.h
SqueakyEngine/src/sq/: Application.cpp  Core.h  Layer.cpp  LayerStack.cpp  Logger.cpp
SqueakyEngine/src/sq/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
SqueakyEngine/src/sq/platform/linux/: LinuxWindow.cpp
